# queueing-sims

./: pyproject.toml
queueing_sims/: clock.py  concurrency.py  fixed-window-ui.py  fixed-window.py  fixed_window.py  super-site-event.py  vaccine-apt-scheduling.py  waiting_for_multiple_tasks.py
queueing_sims/linear-examples/: car.py  nurse-example-oo.py  nurse-example.py  nurse-with-registration-example.py
queueing_sims/non-linear-examples/: route-to-doctor.py
