[tool.poetry]
name = "queueing-sims"
version = "0.1.0"
description = "Simple queue based simulations."
authors = ["Samuel Holloway <samuel.holloway@salesforce.com>"]

[tool.poetry.scripts]
car = "queueing_sims.car:main"
single-db = "queueing_sims.single-server-single-db:main"
             
[tool.poetry.dependencies]
python = "^3.9"
simpy = "^4.0.1"
pandas = "^1.2.3"
rich = "^10.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^6.2.3"
pyflakes = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
